--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="/stylesheets/admin.css">
   </head>
 
-{{#if (typeof Message !== 'undefined')}}
-        <h1> {{Message}}</h1>
-{{/if}}
+
+
+
 <body>
     
+   
+   <h1>{{message}}</h1>
    
     <div class="container">
         <div class="row">
@@ -40,7 +42,8 @@
 
                             <div class="col-lg-12 loginbttm">
                                 <div class="col-lg-6 login-btm login-text">
-                                    <!-- Error Message -->
+                                    <p>{{message}}<p>
+                                        
                                 </div>
                                 <div class="col-lg-6 login-btm login-button">
                                     <button type="submit"  value="login" class="btn btn-outline-primary" id="Admin-login">LOGIN</button>
@@ -54,7 +57,7 @@
         </div>
 
 
-    
+    <script src="/javascripts/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
 </body>
