--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,64 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/admin.css">
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Login Form</title>
+    <link rel="stylesheet" href="/stylesheets/admin.css" />
   </head>
-
-
-
-
-<body>
-    
-   
-   <h1>{{message}}</h1>
-   
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 col-md-2"></div>
-            <div class="col-lg-6 col-md-8 login-box">
-                <div class="col-lg-12 login-key">
-                    <i class="fa fa-key" aria-hidden="true"></i>
-                </div>
-                <div class="col-lg-12 login-title">
-                    ADMIN PANEL
-                </div>
-
-                <div class="col-lg-12 login-form">
-                    <div class="col-lg-12 login-form">
-                        <form action="/login" method="post">
-                            <div class="form-group">
-                                <label class="form-control-label" for="UserID">USERID</label>
-                                <input type="text" class="form-control" id="UserID" name="UserID" placeholder="UserID">
-                            </div>
-                            <div class="form-group">
-                                <label class="form-control-label" for="Password">PASSWORD</label>
-                                <input type="password" class="form-control" id="Password" name="Password" placeholder="Password">
-                            </div>
-
-                            <div class="col-lg-12 loginbttm">
-                                <div class="col-lg-6 login-btm login-text">
-                                    <p>{{message}}<p>
-                                        
-                                </div>
-                                <div class="col-lg-6 login-btm login-button">
-                                    <button type="submit"  value="login" class="btn btn-outline-primary" id="Admin-login">LOGIN</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-2"></div>
-            </div>
+  <body>
+    <div class="center">
+      <h1>Login</h1>
+      <form action="/login" method="post">
+        <div class="txt_field">
+          <input type="text" id="UserID" name="UserID"  required />
+          <span></span>
+          <label for="UserID">UserId</label>
         </div>
-
-
-    <script src="/javascripts/login.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
-</body>
+        <div class="txt_field">
+          <input type="password"  id="Password" name="Password"  required />
+          <span></span>
+          <label for="Password">Password</label>
+        </div>
+        <input type="submit" value="Login" />
+        <div class="signup_link">
+          Not a member? <a href="/">Contact Us</a>
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
