--- a/views/login.hbs
+++ b/views/login.hbs
@@ -19,7 +19,11 @@
           <span></span>
           <label for="Password">Password</label>
         </div>
+        <div class="error_message">
+          <p>{{message}}</p>
+        </div>
         <input type="submit" value="Login" />
+        
         <div class="signup_link">
           Not a member? <a href="/">Contact Us</a>
         </div>
