added crud for member

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/stylesheets/dashboard.css">
+    {{!-- <link rel="stylesheet" href="/stylesheets/dashboard.css"> --}}
 </head>
 <body>
-    <h1>Wlcome</h1>  
+    {{!-- <h1>Wlcome</h1>   --}}
+    {{!-- {{> _header}} --}}
+    {{> _sidebar}}
 
-
-
-<a href="/dashboard/logout">logout</a>
+{{!-- <a href="/dashboard/Members"> Member</a>
+<a href="/dashboard/logout">logout</a> --}}
 </body>
 </html>
