--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,18 +1,114 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    {{!-- <link rel="stylesheet" href="/stylesheets/dashboard.css"> --}}
+    <!-- Montserrat Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Material Icons -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet"
+    />
+{{!-- <span id="main"> --}}
+    <link rel="stylesheet" href="./stylesheets/dashboard.css">
+
 </head>
+ <body id="maindashboard">
 <body>
-    {{!-- <h1>Wlcome</h1>   --}}
+
     {{!-- {{> _header}} --}}
     {{> _sidebar}}
 
-{{!-- <a href="/dashboard/Members"> Member</a>
-<a href="/dashboard/logout">logout</a> --}}
+    {{!-- main dashboard --}}
+    {{!-- <body id="maindashboard"> --}}
+  <div class="grid-container">
+    <!-- Header -->
+    <header class="header">
+      <div class="menu-icon" onclick="openSidebar()">
+        <span class="material-icons-outlined">menu</span>
+      </div>
+      <div class="header-left">
+          <span class="material-icons-outlined">search</span>
+        </div>
+        <div class="header-right">
+          <span class="material-icons-outlined">notifications</span>
+          <span class="material-icons-outlined">email</span>
+          <span class="material-icons-outlined">account_circle</span>
+        </div>
+      </header>
+      <!-- End Header -->
+
+      <!-- Main -->
+      <main class="main-container">
+        <div class="main-title">
+          <h2>DASHBOARD</h2>
+        </div>
+        
+        <div class="main-cards">
+          <div class="card">
+            <div class="card-inner">
+              <h3>CUSTOMERS</h3>
+              <span class="material-icons-outlined">inventory_2</span>
+            </div>
+            <h1>249</h1>
+          </div>
+          
+          <div class="card">
+            <div class="card-inner">
+              <h3>TRAINERS</h3>
+              <span class="material-icons-outlined">category</span>
+            </div>
+            <h1>25</h1>
+          </div>
+          
+          <div class="card">
+            <div class="card-inner">
+              <h3>DATA</h3>
+              <span class="material-icons-outlined">groups</span>
+            </div>
+            <h1>20</h1>
+          </div>
+          
+          <div class="card">
+            <div class="card-inner">
+              <h3>ALERTS</h3>
+              <span class="material-icons-outlined"
+              >notification_important</span
+              >
+            </div>
+            <h1>16</h1>
+          </div>
+        </div>
+        
+        <div class="charts">
+          <div class="charts-card">
+            <h2 class="chart-title">Analysis</h2>
+            <div id="bar-chart"></div>
+          </div>
+          
+          <div class="charts-card">
+            <h2 class="chart-title">Analysis</h2>
+            <div id="area-chart"></div>
+          </div>
+        </div>
+      </main>
+      <!-- End Main -->
+    </div>
+  </span>
+    
+    <!-- Scripts -->
+    <!-- ApexCharts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.35.5/apexcharts.min.js"></script>
+    <!-- Custom JS -->
+    <script src="/javascripts/dashboard.js"></script>
+
+
 </body>
 </html>
