--- a/views/partials/_trainerdashboard.hbs
+++ b/views/partials/_trainerdashboard.hbs
@@ -13,19 +13,6 @@
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="/stylesheets/membertab.css">
-            {{!-- <!-- Montserrat Font -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- Material Icons -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
-      rel="stylesheet"
-    />
-{{!-- <span id="main"> --}}
-    <link rel="stylesheet" href="./stylesheets/dashboard.css"> --}}
 
     <!--<title>Dashboard Sidebar Menu</title>-->
   </head>
@@ -39,7 +26,7 @@
 
           <div class="text logo-text">
             <span class="name">BuildAims Gym</span>
-            <span class="profession">Admin</span>
+            <span class="profession">User</span>
           </div>
         </div>
 
@@ -50,41 +37,35 @@
         <div class="menu">
           <ul class="menu-links">
             <li class="nav-link">
-              <a href="/dashboard">
+              <a href="/trainerdashboard">
                 <i class="bx bx-home-alt icon"></i>
-                <span class="text nav-text">Dashboard</span>
+                <span class="text nav-text">Profile</span>
               </a>
             </li>
 
             <li class="nav-link">
-              <a href="/dashboard/Members">
+              <a href="/trainerdashboard">
                 <i class="bx bx-bar-chart-alt-2 icon"></i>
-                <span class="text nav-text">Members</span>
-              </a>
-            </li>
-            <li class="nav-link">
-              <a href="/dashboard/Trainers">
-                <i class='bx bx-user-circle icon'></i>
-                <span class="text nav-text">Trainer</span>
+                <span class="text nav-text">Attendence</span>
               </a>
             </li>
 
             <li class="nav-link">
-              <a href="#">
+              <a href="/trainerdashboard">
                 <i class="bx bx-bell icon"></i>
-                <span class="text nav-text">Plans</span>
+                <span class="text nav-text">Training Routine</span>
               </a>
             </li>
 
             <li class="nav-link">
-              <a href="#">
+              <a href="/trainerdashboard">
                 <i class="bx bx-pie-chart-alt icon"></i>
                 <span class="text nav-text">Analytics</span>
               </a>
             </li>
 
             <li class="nav-link">
-              <a href="#">
+              <a href="/trainerdashboard">
                 <i class="bx bx-heart icon"></i>
                 <span class="text nav-text">Shop</span>
               </a>
@@ -94,7 +75,7 @@
 
         <div class="bottom-content">
           <li class="">
-            <a href="/dashboard/logout">
+            <a href="/trainerdashboard/logout">
               <i class="bx bx-log-out icon"></i>
               <span class="text nav-text">Logout</span>
             </a>
