--- a/views/Trainers.hbs
+++ b/views/Trainers.hbs
@@ -22,13 +22,13 @@
                         <th>@Email</th>
                         <th>Gender</th>
                         <th>status</th>
-                        <th>Member</th>
+                         <th>Members</th>
                         <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     {{!-- add show --}}
-                    {{> _show}}
+                    {{> _showtrainers}}
                     {{!-- add show --}}
                 </tbody>
             </table>
