--- a/views/partials/_usersidebar.hbs
+++ b/views/partials/_usersidebar.hbs
@@ -13,6 +13,12 @@
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="/stylesheets/membertab.css">
+    {{!-- <link rel="stylesheet" href="./stylesheets/useranalytics.css" />
+    <!-- Boxicons CDN Link -->
+    <link
+      href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
+      rel="stylesheet"
+    /> --}}
 
     <!--<title>Dashboard Sidebar Menu</title>-->
   </head>
@@ -58,7 +64,7 @@
             </li>
 
             <li class="nav-link">
-              <a href="/userdashboard">
+              <a href="/userdashboard/Analytics">
                 <i class="bx bx-pie-chart-alt icon"></i>
                 <span class="text nav-text">Analytics</span>
               </a>
