--- a/views/traineranalytics.hbs
+++ b/views/traineranalytics.hbs
@@ -1,9 +1,12 @@
 
-  {{> _sidebar}}
-<main id="maindashboard">
+ {{> _trainerdashboard}}
+<main id="maintrainerdashboard">
 
+    {{!-- {{> _header}} --}}
+    
 
-   
+    {{!-- main dashboard --}}
+    {{!-- <body id="maindashboard"> --}}
   <div class="grid-container">
     <!-- Header -->
     <header class="header">
@@ -79,8 +82,8 @@
     </div>
   </span>
     
-   
+  
 
 
 </main>
-{{>_footer}}
+{{> _footer}}
