--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -3,6 +3,12 @@
 
 
 <script src="/javascripts/member.js"></script>
+<script src="/javascripts/trainer.js"></script>
+<!-- Scripts -->
+    <!-- ApexCharts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.35.5/apexcharts.min.js"></script>
+    <!-- Custom JS -->
+    <script src="/javascripts/dashboard.js"></script>
 
 
 </body>
