--- a/views/partials/_sidebar.hbs
+++ b/views/partials/_sidebar.hbs
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="/stylesheets/membertab.css">
-            {{!-- <!-- Montserrat Font -->
+            <!-- Montserrat Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
@@ -25,7 +25,7 @@
       rel="stylesheet"
     />
 {{!-- <span id="main"> --}}
-    <link rel="stylesheet" href="./stylesheets/dashboard.css"> --}}
+    <link rel="stylesheet" href="./stylesheets/dashboard.css">
 
     <!--<title>Dashboard Sidebar Menu</title>-->
   </head>
