--- a/views/partials/_trainerdashboard.hbs
+++ b/views/partials/_trainerdashboard.hbs
@@ -13,6 +13,19 @@
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="/stylesheets/membertab.css">
+            <!-- Montserrat Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Material Icons -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet"
+    />
+{{!-- <span id="main"> --}}
+    <link rel="stylesheet" href="./stylesheets/dashboard.css">
 
     <!--<title>Dashboard Sidebar Menu</title>-->
   </head>
@@ -26,7 +39,7 @@
 
           <div class="text logo-text">
             <span class="name">BuildAims Gym</span>
-            <span class="profession">User</span>
+            <span class="profession">Trainer</span>
           </div>
         </div>
 
@@ -58,7 +71,7 @@
             </li>
 
             <li class="nav-link">
-              <a href="/trainerdashboard">
+              <a href="/trainerdashboard/analytics">
                 <i class="bx bx-pie-chart-alt icon"></i>
                 <span class="text nav-text">Analytics</span>
               </a>
