--- a/views/partials/_addmemberform.hbs
+++ b/views/partials/_addmemberform.hbs
@@ -21,6 +21,39 @@
 
             <input id="Password" type="password" name="Password" value="" placeholder="write ur password here">
         </div>
+        
+        <div class="form-group">
+            <label for="Height" class="text-light">Height</label>
+            <input type="hidden" name="id" value="">
+
+            <input id="Height" type="number" step="0.01" name="Height" value="" placeholder="mention your height in meter">
+        </div>
+        <div class="form-group">
+            <label for="Weight" class="text-light">Weight</label>
+            <input type="hidden" name="id" value="">
+            <input id="Weight" type="number" step="0.01" name="Weight" value="" placeholder="mention your Weight in Kgs">
+        </div>
+        <div class="form-group">
+            <label for="BirthDate" class="text-light">BirthDate</label>
+            <input type="hidden" name="id" value="">
+            <input id="BirthDate" type="date"  name="BirthDate" value="" placeholder="mention your Birthdate">
+        </div>
+        <div class="form-group">
+            <label for="Phone" class="text-light">Phone no.</label>
+            <input type="hidden" name="id" value="">
+            <input id="Phone" type="text"  name="Phone" value="" placeholder="mention your contact no (preferable whatsapp.no)">
+        </div>
+        <div class="form-group">
+            <label for="AlternatePhone" class="text-light">Alternate Phone no.</label>
+            <input type="hidden" name="id" value="">
+            <input id="AlternatePhone" type="Text"  name="AlternatePhone" value="" placeholder="mention your other contact no (if any)">
+        </div>
+        <div class="form-group">
+            <label for="Address" class="text-light">Address</label>
+            <input type="hidden" name="id" value="">
+            <input id="Address" type="Text"  name="Address" value="" placeholder="mention your current Address">
+        </div>
+
         <div class="form-group">
             <label for="Gender" class="text-light">Gender</label>
             <div class="radio inline">
