--- a/views/partials/_sidebar.hbs
+++ b/views/partials/_sidebar.hbs
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="/stylesheets/sidebar.css" />
-
+    
+   
     <link
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
@@ -69,24 +70,14 @@
               </a>
             </li>
 
-            <li class="nav-link">
-              <a href="#">
-                <i class="bx bx-bell icon"></i>
-                <span class="text nav-text">Plans</span>
-              </a>
-            </li>
+            
+
+           
 
             <li class="nav-link">
-              <a href="#">
-                <i class="bx bx-pie-chart-alt icon"></i>
-                <span class="text nav-text">Analytics</span>
-              </a>
-            </li>
-
-            <li class="nav-link">
-              <a href="#">
+              <a href="/dashboard/Attendance">
                 <i class="bx bx-heart icon"></i>
-                <span class="text nav-text">Shop</span>
+                <span class="text nav-text">Attendance</span>
               </a>
             </li>
           </ul>
