--- a/views/partials/_userrecipe.hbs
+++ b/views/partials/_userrecipe.hbs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="/stylesheets/sidebar.css" />
-    <link rel="stylesheet" href="/stylesheets/userprofile.css" />
     
+    <link rel="stylesheet" href="/stylesheets/Recipe.css" />
 
     <link
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
