--- a/views/useranalytics.hbs
+++ b/views/useranalytics.hbs
@@ -1,4 +1,8 @@
-
+{{> _usersidebar}}
+<main style="font-size: x-large;">
+   this us user dashboard
+</main>
+{{!-- 
 <!DOCTYPE html>
 <!-- Designined by CodingLab | www.youtube.com/codinglabyt -->
 <html lang="en" dir="ltr">
@@ -193,4 +197,4 @@
       </div>
     </section>
   </body>
-</html>
+</html> --}}
