--- a/views/partials/_showattendance.hbs
+++ b/views/partials/_showattendance.hbs
@@ -1,10 +1,10 @@
-{{#each attendances}}
-<section class="data container my-3 p-4">
-    <form action="/" method="post">
+{{#each attendance}}
+<section class="data container my-1 p-4">
+    
       <div class="row entry p-2 rounded-4">
         <div class="col-sm-6 text-start px-5">{{this.User.UserID}}</div>
         <div class="col-sm-6 text-end px-5">{{this.formattedTime}}</div>
       </div>
-    </form>
+    
   </section>
   {{/each}}
