added membership plan feature in admin section

--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -4,6 +4,7 @@
 
 <script src="/javascripts/member.js"></script>
 <script src="/javascripts/trainer.js"></script>
+<script src="/javascripts/plan.js"></script>
 <!-- Scripts -->
     <!-- ApexCharts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.35.5/apexcharts.min.js"></script>
