--- a/public/stylesheets/membertab.css
+++ b/public/stylesheets/membertab.css
@@ -155,12 +155,15 @@ table{
 
 #update_trainer .form-group,
 #update_user .form-group,
-#add_user .form-group{
+#add_user .form-group,
+#add_plan .form-group{ 
     margin: .4em 0;
 }
 
 #update_trainer .form-group input[type="text"], input[type="password"],input[type="number"],input[type="date"], #update_user .form-group input[type="text"], input[type="password"],input[type="number"],input[type="date"],
-#add_user .form-group input[type="text"], input[type="password"], input[type="number"],input[type="date"] {
+#add_user .form-group input[type="text"], input[type="password"], input[type="number"],input[type="date"], 
+#add_plan .form-group input[type="text"], input[type="number"],
+#update_plan .form-group input[type="text"], input[type="number"]{
     width: 100%;
     padding: .6em 1em;
     margin: .5em 0;
@@ -217,7 +220,9 @@ table{
 
 #update_user .form-group .btn,
 #update_trainer .form-group .btn,
-#add_user .form-group .btn{
+#update_plan .form-group .btn,
+#add_user .form-group .btn,
+#add_plan .form-group .btn{
     width: 100%;
     padding: .9em 1em;
     background-color:#16db93; 
@@ -231,6 +236,7 @@ table{
 
 #update_user .form-group .btn:hover,
 #update_trainer .form-group .btn:hover,
+#update_plan .form-group .btn:hover,
 #add_user .form-group .btn:hover{
     background-color: var(--dark);
     color: var(--border);
