--- a/views/Plan.hbs
+++ b/views/Plan.hbs
@@ -8,8 +8,8 @@
 <main id="site-main">
     <div class="container">
         <div class="box-nav d-flex justify-between">
-            <a href="/dashboard/Members/add_member" class="border-shadow">
-                <span class="text-gradient">New Member<i class="fa-solid fa-user"></i></span>
+            <a href="/dashboard/Plans/add_plan" class="border-shadow">
+                <span class="text-gradient">New Plan<i class="fa-solid fa-user"></i></span>
             </a>
         </div>
         <!-- form handling -->
@@ -17,17 +17,16 @@
             <table class="table">
                 <thead class="thead-dark">
                     <tr>
-                        <th>ID</th>
+                        
                         <th>Name</th>
-                        <th>@Email</th>
-                        <th>Gender</th>
-                        <th>status</th>
+                        <th>Duration</th>
+                        <th>Price</th>
                         <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     {{!-- add show --}}
-                    {{> _show}}
+                    {{> _showplans}}
                     {{!-- add show --}}
                 </tbody>
             </table>
