--- a/views/partials/_sidebar.hbs
+++ b/views/partials/_sidebar.hbs
@@ -80,6 +80,12 @@
                 <span class="text nav-text">Attendance</span>
               </a>
             </li>
+            <li class="nav-link">
+              <a href="/dashboard/Plans">
+                <i class="bx bx-heart icon"></i>
+                <span class="text nav-text">Plans</span>
+              </a>
+            </li>
           </ul>
         </div>
 
